@@ -1,6 +1,6 @@
 #!/bin/bash -x
 
-# Copyright (c) 2018, 2021 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2018, 2022 Oracle and/or its affiliates. All rights reserved.
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License v. 2.0, which is available at
@@ -38,11 +38,11 @@ else
 fi
 
 if [ -z "$GF_TOPLEVEL_DIR" ]; then
-  export GF_TOPLEVEL_DIR=glassfish6
+  export GF_TOPLEVEL_DIR=glassfish7
 fi
 
 ##### installRI.sh starts here #####
-echo "Download and install GlassFish 6.0.0 ..."
+echo "Download and install GlassFish 7.0.0 ..."
 if [ -z "${GF_BUNDLE_URL}" ]; then
   echo "[ERROR] GF_BUNDLE_URL not set"
   exit 1
@@ -56,27 +56,26 @@ echo "TS_HOME $TS_HOME"
 chmod -R 777 $TS_HOME
 cd $TS_HOME/bin
 
-if [[ "$JDK" == "JDK11" || "$JDK" == "jdk11" ]];then
-  export JAVA_HOME=${JDK11_HOME}
-  export PATH=$JAVA_HOME/bin:$PATH
-  cp ts.jte.jdk11 ts.jte
-  export ANT_OPTS="-Djavax.xml.accessExternalStylesheet=all -Djavax.xml.accessExternalSchema=all -Djavax.xml.accessExternalDTD=file,http,https"
-else
-  export ANT_OPTS="-Djava.endorsed.dirs=$TCK_HOME/$GF_TOPLEVEL_DIR/glassfish/modules/endorsed -Djavax.xml.accessExternalStylesheet=all -Djavax.xml.accessExternalSchema=all -Djavax.xml.accessExternalDTD=file,http,https"
+if [[ "$JDK" == "JDK17" || "$JDK" == "jdk17" ]];then
+  export JAVA_HOME=${JDK17_HOME}
 fi
+export PATH=$JAVA_HOME/bin:$PATH
+
+export ANT_OPTS="-Djavax.xml.accessExternalStylesheet=all -Djavax.xml.accessExternalSchema=all -Djavax.xml.accessExternalDTD=file,http,https"
+
 
 which java
 java -version
 
-sed -i "s#^webcontainer\.home=.*#webcontainer.home=$TCK_HOME/$GF_TOPLEVEL_DIR/glassfish#g" ts.jte
-sed -i "s#webcontainer\.home\.ri=.*#webcontainer.home.ri=$TCK_HOME/ri/$GF_TOPLEVEL_DIR/glassfish#g" ts.jte
-sed -i 's#webServerHost\.2=.*#webServerHost.2=localhost#g' ts.jte
-sed -i 's#webServerPort\.2=.*#webServerPort.2=9080#g' ts.jte
-sed -i 's#wsgen.ant.classname=.*#wsgen.ant.classname=com.sun.tools.ws.ant.WsGen#g' ts.jte
-sed -i 's#wsimport.ant.classname=.*#wsimport.ant.classname=com.sun.tools.ws.ant.WsImport#g' ts.jte
-sed -i "s#glassfish.admin.port.ri=.*#glassfish.admin.port.ri=5858#g" ts.jte
-sed -i "s#^report.dir=.*#report.dir=$TCK_HOME/${TCK_NAME}report/${TCK_NAME}#g" ts.jte
-sed -i "s#^work.dir=.*#work.dir=$TCK_HOME/${TCK_NAME}work/${TCK_NAME}#g" ts.jte
+sed -i.bak "s#^webcontainer\.home=.*#webcontainer.home=$TCK_HOME/$GF_TOPLEVEL_DIR/glassfish#g" ts.jte
+sed -i.bak "s#webcontainer\.home\.ri=.*#webcontainer.home.ri=$TCK_HOME/ri/$GF_TOPLEVEL_DIR/glassfish#g" ts.jte
+sed -i.bak 's#webServerHost\.2=.*#webServerHost.2=localhost#g' ts.jte
+sed -i.bak 's#webServerPort\.2=.*#webServerPort.2=9080#g' ts.jte
+sed -i.bak 's#wsgen.ant.classname=.*#wsgen.ant.classname=com.sun.tools.ws.ant.WsGen#g' ts.jte
+sed -i.bak 's#wsimport.ant.classname=.*#wsimport.ant.classname=com.sun.tools.ws.ant.WsImport#g' ts.jte
+sed -i.bak "s#glassfish.admin.port.ri=.*#glassfish.admin.port.ri=5858#g" ts.jte
+sed -i.bak "s#^report.dir=.*#report.dir=$TCK_HOME/${TCK_NAME}report/${TCK_NAME}#g" ts.jte
+sed -i.bak "s#^work.dir=.*#work.dir=$TCK_HOME/${TCK_NAME}work/${TCK_NAME}#g" ts.jte
 
 mkdir -p $TCK_HOME/${TCK_NAME}report/${TCK_NAME}
 mkdir -p $TCK_HOME/${TCK_NAME}work/${TCK_NAME}
@@ -98,9 +97,9 @@ cp $TCK_HOME/latest-glassfish.zip $TCK_HOME/ri/latest-glassfish.zip
 cd $TCK_HOME/ri
 unzip -q latest-glassfish.zip
 
-sed -i 's/4848/5858/g' $RI_DOMAIN_CONFIG_FILE
-sed -i 's/8080/9080/g' $RI_DOMAIN_CONFIG_FILE
-sed -i 's/8181/9181/g' $RI_DOMAIN_CONFIG_FILE
+sed -i.bak 's/4848/5858/g' $RI_DOMAIN_CONFIG_FILE
+sed -i.bak 's/8080/9080/g' $RI_DOMAIN_CONFIG_FILE
+sed -i.bak 's/8181/9181/g' $RI_DOMAIN_CONFIG_FILE
 
 cd $TCK_HOME/ri/$GF_TOPLEVEL_DIR/glassfish/bin
 ./asadmin start-domain
@@ -116,6 +115,8 @@ cd $TCK_HOME/ri/$GF_TOPLEVEL_DIR/glassfish/bin
 ./asadmin start-domain
 
 cd $TS_HOME/src/com/sun/ts/tests/jaxws
+ant -Dkeywords=all -Dbuild.vi=true build
+cd $TS_HOME/src/com/sun/ts/tests/jws
 ant -Dkeywords=all -Dbuild.vi=true build
 cd $TS_HOME/bin
 ant -Dkeywords=all deploy.all
